// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameCard functionality and rendering GiverGameCard renders correctly 1`] = `
<div
  className="sc-AxjAm fAwBWA"
>
  <div
    className="sc-AxiKw dGnLMo"
  >
    Will Smith
  </div>
  <div
    className="sc-AxhCb JZaCe"
  >
    <ul
      className="sc-AxhUy jJntqQ"
    >
      <li
        className="sc-AxgMl cDzLXU"
      >
        Fresh Prince
      </li>
      <li
        className="sc-AxgMl cDzLXU"
      >
        Philadelphia
      </li>
      <li
        className="sc-AxgMl cDzLXU"
      >
        Jazzy Jeff
      </li>
      <li
        className="sc-AxgMl cDzLXU"
      >
        Independence Day
      </li>
      <li
        className="sc-AxgMl cDzLXU"
      >
        Jada Pinkett
      </li>
    </ul>
  </div>
  <div
    className="sc-fzoLsD bLdJIe"
  >
    <button
      className="sc-AxheI bYfwqV"
      disabled={false}
      onClick={[Function]}
    >
      Skip!
    </button>
    <button
      className="sc-AxheI sc-Axmtr jEDxKF"
      disabled={false}
      onClick={[Function]}
    >
      Next!
    </button>
  </div>
</div>
`;

exports[`GameCard functionality and rendering TeamGameCard renders correctly for giverTeam 1`] = `
<div
  className="sc-AxjAm fAwBWA"
>
  <div
    className="sc-AxiKw dGnLMo"
  >
    Guess!
  </div>
  <div
    className="sc-AxhCb JZaCe"
  >
    <p
      className="sc-fzpans ifLBye"
    >
      It's your teams turn to guess the word! 
      <span
        className="sc-fzplWN kxXpQP"
      >
        Joe
      </span>
       is giving the clues and
       
      <span
        className="sc-fzplWN kxXpQP"
      >
        Sam
      </span>
       will be making sure they don't say anything Taboo!
    </p>
  </div>
</div>
`;

exports[`GameCard functionality and rendering TeamGameCard renders correctly for watcherTeam 1`] = `
<div
  className="sc-AxjAm fAwBWA"
>
  <div
    className="sc-AxiKw dGnLMo"
  >
    Relax!
  </div>
  <div
    className="sc-AxhCb JZaCe"
  >
    <p
      className="sc-fzpans ifLBye"
    >
      It’s the other team’s turn to give clues and guess! 
      <span
        className="sc-fzplWN kxXpQP"
      >
        Sam
      </span>
       will be watching to make sure 
      <span
        className="sc-fzplWN kxXpQP"
      >
        Joe
      </span>
       doesn’t say any Taboo words.
    </p>
  </div>
</div>
`;

exports[`GameCard functionality and rendering WatcherGameCard renders correctly 1`] = `
<div
  className="sc-AxjAm fAwBWA"
>
  <div
    className="sc-AxiKw dGnLMo"
  >
    Will Smith
  </div>
  <div
    className="sc-AxhCb JZaCe"
  >
    <ul
      className="sc-AxhUy jJntqQ"
    >
      <li
        className="sc-AxgMl cDzLXU"
      >
        Fresh Prince
      </li>
      <li
        className="sc-AxgMl cDzLXU"
      >
        Philadelphia
      </li>
      <li
        className="sc-AxgMl cDzLXU"
      >
        Jazzy Jeff
      </li>
      <li
        className="sc-AxgMl cDzLXU"
      >
        Independence Day
      </li>
      <li
        className="sc-AxgMl cDzLXU"
      >
        Jada Pinkett
      </li>
    </ul>
  </div>
  <div
    className="sc-fzoLsD bLdJIe"
  >
    <button
      className="sc-AxheI sc-AxmLO hTCvJk"
      disabled={false}
      onClick={[Function]}
    >
      Buzzer!
    </button>
  </div>
</div>
`;
